--- a/style.css
+++ b/style.css
@@ -1,9 +1,13 @@
-html {
-  height: 100%;
-  width: 100%;
+body {
+  background-color: #004290;
 }
-
-body{
-  background-color: #009995;
-  color: #ffffff;
+/* 글꼴설정 */
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 
+{
+ font-family: "Black Han Sans", sans-serif;
 }
